--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "czar",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A light weight and robust CMS for node.js with dead simple integration.",
   "main": "./app/server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
