--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "czar",
-  "version": "1.0.6",
-  "description": "A light weight and robust CMS for node.js with dead simple integration.",
+  "version": "1.0.7",
+  "description": "A light weight and flexible CMS for node.js with dead simple integration.",
   "main": "./app/server/index.js",
   "scripts": {
     "build": "gulp build"
