--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czar",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A light weight and flexible CMS for node.js with dead simple integration.",
   "main": "./app/server/index.js",
   "scripts": {
@@ -10,6 +10,14 @@
     "type": "git",
     "url": "https://github.com/Dissimulate/czar.git"
   },
+  "keywords": [
+    "CMS",
+    "czar",
+    "content",
+    "management",
+    "blog",
+    "express"
+  ],
   "author": "Adam Brooks",
   "license": "ISC",
   "dependencies": {
